--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     <h2>About</h2>
     <img src="katz-james.jpg" alt="James E. Katz">
     <p>
-        James E. Katz is a distinguished academic with extensive experience in communication studies. His research focuses on the social aspects of communication technologies. He has published numerous papers in top-tier journals and has been a keynote speaker at various international conferences.
+        James E. Katz is the Feld Professor of Emerging Media Studies and was the inaugural director of the Division of Emerging Media Studies. His current research examines the melding of mobile communication technology and artificial intelligence (AI) and what this will mean for society. His pioneering publications on AI and society, social media, mobile communication, and robot-human interaction have been internationally recognized and translated into a dozen languages. Katz’s two most recent books are Perceiving the Future Through New Communication Technologies: Robots, AI and Everyday Life and Nudging Choices Through Media: Ethical and Philosophical Implications for Humanity, both co-edited with Juliet Floyd and Katie Schiepers. Earlier books include The Social Media President: Barack Obama and the Politics of Citizen Engagement (with Michael Barris and Anshul Jain), Social Consequences of Internet Use: Access, Involvement, Expression (with Ronald E. Rice) and Handbook of Mobile Communication Studies. According to Google Scholar, his works have been cited more than 17,000 times. 
+        Immediately prior to his Boston University appointment, he was Board of Governors Distinguished Professor of Communication at Rutgers University (the title being the highest honor that Rutgers can bestow on one of its faculty). Earlier in his career he was a distinguished member of staff at Bell Communications Research. In 2021, he received the prestigious Frederick Williams Prize for Contributions to the Study of Communication Technology by the International Communication Association, which recognizes annually “an outstanding scholar whose works and cumulative achievements have significantly advanced the study of communication technology.” In 2013, he received an honorary doctorate from Budapest University of Technology and Economics. Among his other awards are the Ogburn Career Achievement award from the American Sociological Association and the Fulbright Distinguished Chair in Twentieth Century Communications History. He is an elected Fellow of several professional societies and holds two patents.
     </p>
 </section>
 
 <section id="publications">
     <h2>Publications</h2>
     <ul>
-        <li>"Living inside mobile social information" - Editor, 2013</li>
-        <li>"The social media president: Barack Obama and the politics of digital engagement" - Co-author, 2013</li>
-        <li>"Mobile communication: Dimensions of social policy" - Editor, 2011</li>
+        <li>Mays, K. K., Cummings, J. J., & Katz, J. E. (2024). The Robot Rights and Responsibilities Scale: Development and Validation of a Metric for Understanding Perceptions of Robots’ Rights and Responsibilities. International Journal of Human–Computer Interaction, 1–18. https://doi.org/10.1080/10447318.2024.2338332</li>
+        <li>Katz, J. E.,(2023) Why Machines Will Rule the World (Mostly), Paper prepared for the bilingual workshop AI:From robotics to philosophy: the intelligent robots of the future – or human evolutionary development based on AIfoundations</li>
         <!-- Add more publications as needed -->
     </ul>
 </section>
