--- a/index.html
+++ b/index.html
@@ -95,20 +95,11 @@
     <h2>Resume</h2>
     <p>
         <strong>Education</strong><br>
-        Doctorem Honoris Causa, Budapest University of Technology and Economics, 2013<br>
-        PhD, Political Sociology, Rutgers University, 1974<br>
-        MEd, Educational Psychology & Statistics, Rutgers University, 1977<br>
-        MA, Sociology, Northern Illinois University, 1972<br>
-        BA, Sociology, Northern Illinois University, 1970
-    </p>
-    <p>
-        <strong>Professional Experience</strong><br>
-        2012 - Present: Feld Family Professor of Emerging Media, Boston University<br>
-        1997 - 2013: Board of Governors Professor of Communication, Rutgers University<br>
-        2009 - 2010: Visiting Fellow, Princeton University<br>
-        1986 - 1998: Senior Scientist, Bell Communications Research<br>
-        1983 - 1986: Assistant Professor, University of Texas, Austin<br>
-        <!-- Add more professional experience as needed -->
+        Doctorem Honoris Causa, Budapest University of Technology and Economics<br>
+        PhD, Political Sociology, Rutgers University<br>
+        MEd, Educational Psychology & Statistics, Rutgers University<br>
+        MA, Sociology, Northern Illinois University<br>
+        BA, Sociology, Northern Illinois University
     </p>
 </section>
 
